@@ -337,6 +337,8 @@ Release 2.4.0 - UNRELEASED
     HDFS-6071. BlockReaderLocal doesn't return -1 on EOF when doing a
     zero-length read on a short file (cmccabe)
 
+    HDFS-5892. TestDeleteBlockPool fails in branch-2. (Ted Yu via wheat9)
+
   BREAKDOWN OF HDFS-5698 SUBTASKS AND RELATED JIRAS
 
     HDFS-5717. Save FSImage header in protobuf. (Haohui Mai via jing9)
